--- a/index.html
+++ b/index.html
@@ -4,17 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
+
+    <!-- FAVICON -->
+     <link rel="shortcut icon" href="assets/hero.png" type="image/x-icon">
+
+    <!-- FIRA SANS > GOOGLE FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!-- THIS IS CUSTOM CSS STYLE LINK -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <!-- THIS IS HEADER -->
-    <header>
+    <header class="header">
+
+        <nav>
+            <h1 class="nav-title">Bangladesh 2.0</h1>
+            <ul class="items">
+                <li class="item"><a href="#"><button class="btn-transparent primary-color">Sign In</button></a></li>
+            </ul>
+        </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-subtitle">Bangladesh 2.0</h3>
+                <h2 class="banner-heading">Idea , innovation ,
+                    vision and challenges in New Bangladesh.</h2>
+                <button class="primary-btn">Explore New Bangladesh</button>
+            </div>
+            <img class="banner-hero-image" src="assets/hero.png" alt="National Martyrs' Monument">
+        </div>
 
     </header>
 
     <!-- THIS IS MAIN -->
      <main>
-        <h1>Hello Bangladesh 2.0</h1>
+        
      </main>
 
      <!-- THIS IS FOOTER -->
