--- a/index.html
+++ b/index.html
@@ -41,7 +41,31 @@
 
     <!-- THIS IS MAIN -->
      <main>
-        
+        <!-- The Vision of Future Section -->
+        <section class="future-section">
+            <h2 class="future-subtitle">The Vision of Future</h2>
+            <p class="future-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="future-content-item">
+                 <div class="future bg-future-1">
+                    <img class="card-icon" src="assets/card-icon.png" alt="Digital Transformation">
+                    <h4 class="future-title">Digital Transformation</h4>
+                    <p class="future-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn btn-future-1">Learn More</button>
+                 </div>
+                 <div class="future bg-future-2">
+                    <img class="card-icon" src="assets/card-icon.png" alt="Green Energy">
+                    <h4 class="future-title">Green Energy</h4>
+                    <p class="future-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn btn-future-2">Learn More</button>
+                 </div>
+                 <div class="future bg-future-3">
+                    <img class="card-icon" src="assets/card-icon.png" alt="Modern Infrastructure">
+                    <h4 class="future-title">Modern Infrastructure</h4>
+                    <p class="future-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="btn btn-future-3 ">Learn More</button>
+                 </div>
+            </div>
+        </section>
      </main>
 
      <!-- THIS IS FOOTER -->
