--- a/index.html
+++ b/index.html
@@ -111,6 +111,29 @@
 
           </section>
 
+          <!-- Donate For Bangladesh -->
+           <section class="donate">
+            <h2 class="donate-title">Donate Today</h2>
+            <p class="donate-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="donate-price-card">
+                <div class="donate-price-card-item">
+                    <h2>100 Taka</h2>
+                </div>
+                <div class="donate-price-card-item">
+                    <h2>200 Taka</h2>
+                </div>
+                <div class="donate-price-card-item">
+                    <h2>500 Taka</h2>
+                </div>
+                <div class="donate-price-card-item">
+                    <h2>1000 Taka</h2>
+                </div>
+            </div>
+            <div class="donate-custom-price">
+                <input type="text" name="" id="" placeholder="Other Amount (Taka)">
+            </div>
+            <button class="primary-btn">Donate Now</button>
+           </section>
 
      </main>
 
