Donate Now Section Some CSS & HTML Changes

--- a/index.html
+++ b/index.html
@@ -130,9 +130,12 @@
                 </div>
             </div>
             <div class="donate-custom-price">
-                <input type="text" name="" id="" placeholder="Other Amount (Taka)">
+                <form action="#">
+                    <input type="text" name="" id="" placeholder="Other Amount (Taka)">
+                    <input  class="primary-btn" type="submit" value="Donate Now"></input>
+                </form>
             </div>
-            <button class="primary-btn">Donate Now</button>
+            
            </section>
 
      </main>
