--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
             
            </section>
 
+           <!-- Subscribe Newsletter -->
+            <section class="subscribe">
+                <h2 class="subscribe-title">Subscribe Newsletter</h2>
+                <p class="subscribe-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+                <form action="#">
+                    <input type="email" name="" id="" placeholder="Enter your email here">
+                    <input type="submit" value="Subscribe">
+                </form>
+                <p class="form-note">We promise not to spam you!</p>
+            </section>
+
      </main>
 
      <!-- THIS IS FOOTER -->
