--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
            <!-- Subscribe Newsletter -->
             <section class="subscribe">
                 <h2 class="subscribe-title">Subscribe Newsletter</h2>
-                <p class="subscribe-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+                <p class="subscribe-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
                 <form action="#">
                     <input type="email" name="" id="" placeholder="Enter your email here">
                     <input type="submit" value="Subscribe">
