--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- THIS IS CUSTOM CSS STYLE LINK -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="body-bg">
     <!-- THIS IS HEADER -->
     <header class="header">
 
@@ -40,7 +40,8 @@
     </header>
 
     <!-- THIS IS MAIN -->
-     <main>
+     <main class="body-width">
+        
         <!-- The Vision of Future Section -->
         <section class="future-section">
             <h2 class="future-subtitle">The Vision of Future</h2>
@@ -116,16 +117,16 @@
             <h2 class="donate-title">Donate Today</h2>
             <p class="donate-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
             <div class="donate-price-card">
-                <div class="donate-price-card-item">
+                <div class="donate-price-card-item bg-lite-1">
                     <h2>100 Taka</h2>
                 </div>
-                <div class="donate-price-card-item">
+                <div class="donate-price-card-item bg-lite-2">
                     <h2>200 Taka</h2>
                 </div>
-                <div class="donate-price-card-item">
+                <div class="donate-price-card-item bg-lite-3">
                     <h2>500 Taka</h2>
                 </div>
-                <div class="donate-price-card-item">
+                <div class="donate-price-card-item bg-lite-4">
                     <h2>1000 Taka</h2>
                 </div>
             </div>
